fix(overflow): Improving debug of target items overflowing viewport edge to edge. Deleted wildcard in stylesheet and setting viewport to default. Also changing height  in % in body to viewport height. Improving but no solution.

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -9,10 +9,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Galindo&family=Prompt:wght@200;300;400;500&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-}
 
 :root {
     font-size: 6.25%;
@@ -23,7 +19,7 @@ html, body {
             box-sizing: border-box;
     background-color: #fdfce7;
     font-size: 16rem;
-    height: 100%;
+    height: 100vh;
 }
 
 *, *::before, *::after {
